[project]
name = "c14"
version = "0.1.0"
description = "Atividades_Engenharia_Software"
authors = [
    {name = "JaumGabriell",email = "joao.barbosa@gec.inatel.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
